Optimize memory usage of ranking by result quality

--- a/configproblem/qaoa/qaoa_instance_evaluation.ipynb
+++ b/configproblem/qaoa/qaoa_instance_evaluation.ipynb
@@ -31,12 +31,12 @@
     "# instance generation config\n",
     "use_predefined_instances = True\n",
     "\n",
-    "num_instances = 60\n",
+    "num_instances = 10\n",
     "num_features = 7\n",
     "min_num_clauses = 3\n",
     "max_num_clauses = 3\n",
     "min_num_literals_per_clause = 2\n",
-    "max_num_literals_per_clause = 7\n",
+    "max_num_literals_per_clause = 3\n",
     "min_feature_cost = 0\n",
     "max_feature_cost = 0\n",
     "alpha_sat = None\n",
@@ -55,9 +55,9 @@
     "\n",
     "# run config\n",
     "run_print_hamiltonians = False\n",
-    "run_cost_landscape = True\n",
-    "run_puso_qaoa = False\n",
-    "run_quso_qaoa = False\n",
+    "run_cost_landscape = False\n",
+    "run_puso_qaoa = True\n",
+    "run_quso_qaoa = True\n",
     "\n",
     "\n",
     "# cost landscape config\n",
@@ -194,17 +194,21 @@
    "outputs": [],
    "source": [
     "# plot PUBO results\n",
-    "probabilities_list = []\n",
+    "result_quality_list = []\n",
     "if run_puso_qaoa:\n",
     "    for index, instance in enumerate(problem_instances):\n",
     "        print(f\"Instance {index}:\")\n",
     "        hamiltonian = instance.get_puso_combined_hamiltonian()\n",
     "\n",
     "        probabilities, _ = apply_qaoa_statevector(puso_problem_circuit, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=print_res)\n",
-    "        probabilities_list.append(probabilities)\n",
     "        probabilities_dict = {}\n",
     "        for i in range(0, 2 ** get_hamiltonian_dimension(hamiltonian)):\n",
-    "            probabilities_dict[(np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian)))] = round(probabilities[i], 4)\n",
+    "            probabilities_dict[(np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian)))] = probabilities[i]\n",
+    "\n",
+    "        result_quality_list.append(instance.get_result_quality(probabilities_dict))\n",
+    "\n",
+    "        for key in probabilities_dict:\n",
+    "            probabilities_dict[key] = round(probabilities_dict[key], 4)\n",
     "\n",
     "        plot_counts_histogram(probabilities_dict, get_hamiltonian_dimension(hamiltonian), instance.get_best_config(), instance.get_valid_configs())"
    ]
@@ -217,22 +221,6 @@
    "source": [
     "# rank instances by result_quality = success_probability * 2^num_features / num_valid_configs\n",
     "if run_puso_qaoa:\n",
-    "    result_quality_list = []\n",
-    "    for index, instance in enumerate(problem_instances):\n",
-    "        if len(instance.get_valid_configs()) == 0:\n",
-    "            continue\n",
-    "        # determine result quality\n",
-    "        probabilities = probabilities_list[index]\n",
-    "        probabilities_dict = {}\n",
-    "        for i in range(0, 2 ** get_hamiltonian_dimension(instance.get_puso_combined_hamiltonian())):\n",
-    "            probabilities_dict[(np.binary_repr(i, width=get_hamiltonian_dimension(instance.get_puso_combined_hamiltonian())))] = probabilities[i]\n",
-    "\n",
-    "        result_quality = 0\n",
-    "        for config in instance.get_valid_configs():\n",
-    "            result_quality += probabilities_dict[config]\n",
-    "        result_quality *= 2 ** instance.get_num_features() / len(instance.get_valid_configs())\n",
-    "        result_quality_list.append(result_quality)\n",
-    "\n",
     "    # sort instances by result_quality\n",
     "    sorted_indices = np.argsort(result_quality_list)\n",
     "    sorted_indices = sorted_indices[::-1]\n",
@@ -253,7 +241,7 @@
    "outputs": [],
    "source": [
     "# plot quadratized QUBO results\n",
-    "probabilities_dict_list = []\n",
+    "result_quality_list = []\n",
     "if run_quso_qaoa:\n",
     "    for index, instance in enumerate(problem_instances):\n",
     "        print(f\"Instance {index}:\")\n",
@@ -265,7 +253,7 @@
     "            probabilities_dict[np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian))] = probabilities[i]\n",
     "\n",
     "        probabilities_dict = convert_ancilla_bit_results(probabilities_dict, instance.get_num_features())\n",
-    "        probabilities_dict_list.append(probabilities_dict)\n",
+    "        result_quality_list.append(instance.get_result_quality(probabilities_dict))\n",
     "\n",
     "        for key in probabilities_dict:\n",
     "            probabilities_dict[key] = round(probabilities_dict[key], 4)\n",
@@ -281,18 +269,6 @@
    "source": [
     "# rank instances by result_quality = success_probability * 2^num_features / num_valid_configs\n",
     "if run_quso_qaoa:\n",
-    "    result_quality_list = []\n",
-    "    for index, instance in enumerate(problem_instances):\n",
-    "        if len(instance.get_valid_configs()) == 0:\n",
-    "            continue\n",
-    "        # determine result quality\n",
-    "        probabilities_dict = probabilities_dict_list[index]\n",
-    "        result_quality = 0\n",
-    "        for config in instance.get_valid_configs():\n",
-    "            result_quality += probabilities_dict[config]\n",
-    "        result_quality *= 2 ** instance.get_num_features() / len(instance.get_valid_configs())\n",
-    "        result_quality_list.append(result_quality)\n",
-    "\n",
     "    # sort instances by result_quality\n",
     "    sorted_indices = np.argsort(result_quality_list)\n",
     "    sorted_indices = sorted_indices[::-1]\n",
@@ -301,7 +277,7 @@
     "    for index, instance in enumerate(sorted_problem_instances):\n",
     "        print(f\"Instance {sorted_indices[index]}:\")\n",
     "        print(str(instance))\n",
-    "        print(f\"Result quality: {result_quality_list[sorted_indices[index]]}\")"
+    "        print(f\"Result quality: {result_quality_list[sorted_indices[index]]}\\n\")"
    ]
   }
  ],
