Add hamiltonian normalization for f mu plot input

--- a/configproblem/qaoa/qaoa_instance_evaluation.ipynb
+++ b/configproblem/qaoa/qaoa_instance_evaluation.ipynb
@@ -12,7 +12,7 @@
     "from qaoa_application import apply_qaoa_statevector\n",
     "from qaoa_mincost_k_sat import problem_circuit as puso_problem_circuit, convert_ancilla_bit_results\n",
     "from qaoa_mincost_sat import problem_circuit as quso_problem_circuit\n",
-    "from configproblem.util.hamiltonian_math import get_hamiltonian_dimension\n",
+    "from configproblem.util.hamiltonian_math import get_hamiltonian_dimension, get_normalized_hamiltonian\n",
     "from configproblem.util.visualization import plot_counts_histogram, plot_beta_gamma_cost_landscape, plot_f_mu_cost_landscape\n",
     "from configproblem.util.problem_instance import ProblemInstance, generate_problem_instance_set\n",
     "from pprint import pprint\n",
@@ -55,9 +55,9 @@
     "\n",
     "# run config\n",
     "run_print_hamiltonians = False\n",
-    "run_cost_landscape = False\n",
-    "run_puso_qaoa = True\n",
-    "run_quso_qaoa = True\n",
+    "run_cost_landscape = True\n",
+    "run_puso_qaoa = False\n",
+    "run_quso_qaoa = False\n",
     "\n",
     "\n",
     "# cost landscape config\n",
@@ -182,7 +182,7 @@
     "                        {'hamiltonian': instance.get_puso_combined_hamiltonian(), 'name': 'COMBINED'}]\n",
     "        strategies = ['min', 'avg', 'top']\n",
     "        plot_beta_gamma_cost_landscape(quso_problem_circuit, hamiltonians, strategies, instance.get_num_features(), beta_gamma_step_size)\n",
-    "        plot_f_mu_cost_landscape(instance.get_puso_combined_hamiltonian(), instance.get_num_features())"
+    "        plot_f_mu_cost_landscape(get_normalized_hamiltonian(instance.get_puso_combined_hamiltonian()), instance.get_num_features())"
    ]
   },
   {
