--- a/configproblem/qaoa/qaoa_instance_evaluation.ipynb
+++ b/configproblem/qaoa/qaoa_instance_evaluation.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "# instance generation config\n",
-    "use_predefined_instances = True\n",
+    "use_predefined_instances = False\n",
     "\n",
     "num_instances = 10\n",
     "num_features = 7\n",
@@ -41,7 +41,7 @@
     "max_feature_cost = 0\n",
     "alpha_sat = None\n",
     "seed = 42\n",
-    "generation_type = 'growing_num_literals' # 'random', 'growing_num_clauses', 'growing_num_literals', 'growing_num_clauses_and_literals, 'append_clauses' or 'alpha_sat'\n",
+    "generation_type = 'random' # 'random', 'growing_num_clauses', 'growing_num_literals', 'growing_num_clauses_and_literals, 'append_clauses' or 'alpha_sat'\n",
     "# instance used as starting point for generation type 'alpha_sat', set to None to use randomly generated instance\n",
     "x1, x2, x3, x4, x5, x6 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6')\n",
     "start_instance = ProblemInstance([[(x1, True), (x2, True)],\n",
@@ -177,9 +177,13 @@
     "if run_cost_landscape:\n",
     "    for index, instance in enumerate(problem_instances):\n",
     "        print(f\"Instance {index}:\")\n",
-    "        hamiltonians = [{'hamiltonian': instance.get_puso_sat_hamiltonian(), 'name': 'SAT'},\n",
-    "                        {'hamiltonian': instance.get_cost_hamiltonian(), 'name': 'COST'},\n",
-    "                        {'hamiltonian': instance.get_puso_combined_hamiltonian(), 'name': 'COMBINED'}]\n",
+    "        if len(instance.get_cost_hamiltonian()) == 0:\n",
+    "            print(\"Cost hamiltonian is zero, skipping plot for cost and combined hamiltonian\")\n",
+    "            hamiltonians = [{'hamiltonian': instance.get_puso_sat_hamiltonian(), 'name': 'SAT'}]\n",
+    "        else:\n",
+    "            hamiltonians = [{'hamiltonian': instance.get_puso_sat_hamiltonian(), 'name': 'SAT'},\n",
+    "                            {'hamiltonian': instance.get_cost_hamiltonian(), 'name': 'COST'},\n",
+    "                            {'hamiltonian': instance.get_puso_combined_hamiltonian(), 'name': 'COMBINED'}]\n",
     "        strategies = ['min', 'avg', 'top']\n",
     "        plot_beta_gamma_cost_landscape(quso_problem_circuit, hamiltonians, strategies, instance.get_num_features(), beta_gamma_step_size)\n",
     "        plot_f_mu_cost_landscape(get_normalized_hamiltonian(instance.get_puso_combined_hamiltonian()), instance.get_num_features())"
