Add implementation for QAOA with different parameters for each layer

--- a/configproblem/qaoa/qaoa_instance_evaluation.ipynb
+++ b/configproblem/qaoa/qaoa_instance_evaluation.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "# instance generation config\n",
-    "use_predefined_instances = False\n",
+    "use_predefined_instances = True\n",
     "\n",
     "num_instances = 10\n",
     "num_features = 7\n",
@@ -55,16 +55,16 @@
     "\n",
     "# run config\n",
     "run_print_hamiltonians = False\n",
-    "run_cost_landscape = True\n",
-    "run_puso_qaoa = False\n",
-    "run_quso_qaoa = False\n",
+    "run_cost_landscape = False\n",
+    "run_puso_qaoa = True\n",
+    "run_quso_qaoa = True\n",
     "\n",
     "\n",
     "# cost landscape config\n",
     "beta_gamma_step_size = 0.2\n",
     "\n",
     "# qaoa application config\n",
-    "layers = 60 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
+    "layers = 10 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
     "theta = {\"beta\": 0.01, \"gamma\": -0.01} # start values for optimization\n",
     "strategy = 'min'\n",
     "use_warmstart = False\n",
