Combine get_expectation() functions

--- a/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
@@ -159,7 +159,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example_qc_problem, _ = problem_circuit(sat_hamiltonian, 6)\n",
+    "from qiskit.circuit import Parameter\n",
+    "\n",
+    "example_qc_problem = problem_circuit(sat_hamiltonian, 6, Parameter(\"$\\\\gamma$\"))\n",
     "example_qc_problem.draw(output='mpl')"
    ]
   },
