Adjust notebook to work with changed functions

--- a/configproblem/qaoa/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_sat.ipynb
@@ -152,7 +152,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example_qc_mixer, _ = mixer_circuit(2)\n",
+    "from qiskit.circuit import Parameter\n",
+    "\n",
+    "example_qc_mixer = mixer_circuit(2, Parameter(\"$\\\\beta$\"))\n",
     "example_qc_mixer.draw(output=\"mpl\")"
    ]
   },
@@ -215,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example_qc_problem, _ = problem_circuit(sat_hamiltonian, 6)\n",
+    "example_qc_problem = problem_circuit(sat_hamiltonian, 6, Parameter(\"$\\\\gamma$\"))\n",
     "example_qc_problem.draw(output=\"mpl\")"
    ]
   },
@@ -281,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counts, qc = quantum(problem_circuit, sat_hamiltonian, 6, 1, 1, 1)\n",
+    "counts, qc = quantum(problem_circuit, sat_hamiltonian, 6, 1, [1], [1])\n",
     "qc.draw(output=\"mpl\")"
    ]
   },
