--- a/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
@@ -52,13 +52,13 @@
     "\n",
     "$$\n",
     "min~y(x) = 1 - \\frac{1 -s_1}{2} - \\frac{1 - s_2}{2} + \\frac{1 - s_3}{2} + \\frac{1 - s_1}{2} \\frac{1 - s_2}{2} - \\frac{1 - s_2}{2} \\frac{1 - s_3}{2} - \\frac{1 - s_3}{2} \\frac{1 - s_4}{2} + \\frac{1 - s_5}{2} \\frac{1 - s_6}{2} + \\frac{1 - s_2}{2} \\frac{1 - s_3}{2} \\frac{1 - s_4}{2} - \\frac{1 - s_3}{2} \\frac{1 - s_5}{2} \\frac{1 - s_6}{2}\\\\\n",
-    "= 1 + s_1 \\frac{1}{2} + s_2 \\frac{1}{2} - s_3 \\frac{1}{2} - s_1 s_2 \\frac{1}{4} + s_2 s_3 \\frac{1}{4} + s_3 s_4 \\frac{1}{4} - s_5 s_6 \\frac{1}{4} - s_2 s_3 s_4 \\frac{1}{8} + s_3 s_5 s_6 \\frac{1}{8}\\\\\n",
+    "= \\frac{1}{2} - \\frac{1}{4} s_1 + \\frac{3}{8} s_2 + \\frac{1}{8} s_4 - \\frac{1}{8} s_5 - \\frac{1}{8} s_6 + \\frac{1}{4} s_1 s_2 - \\frac{1}{8} s_2 s_3 + \\frac{1}{8} s_2 s_4 - \\frac{1}{8} s_3 s_4 - \\frac{1}{8} s_3 s_5 - \\frac{1}{8} s_3 s_6 + \\frac{1}{8} s_5 s_6 - \\frac{1}{8} s_2 s_3 s_4 + \\frac{1}{8} s_3 s_5 s_6\\\\\n",
     "$$\n",
     "\n",
     "Which leaves us with the following cost hamiltonian $H_C$:\n",
     "\n",
     "$$\n",
-    "H_C = 1 * I + \\sigma_1^z \\frac{1}{2} + \\sigma_2^z \\frac{1}{2} - \\sigma_3^z \\frac{1}{2} - \\sigma_1^z \\sigma_2^z \\frac{1}{4} + \\sigma_2^z \\sigma_3^z \\frac{1}{4} + \\sigma_3^z \\sigma_4^z \\frac{1}{4} - \\sigma_5^z \\sigma_6^z \\frac{1}{4} - \\sigma_2^z \\sigma_3^z \\sigma_4^z \\frac{1}{8} + \\sigma_3^z \\sigma_5^z \\sigma_6^z \\frac{1}{8}\n",
+    "H_C = \\frac{1}{2} - \\frac{1}{4} \\sigma_1^z + \\frac{3}{8} \\sigma_2^z + \\frac{1}{8} \\sigma_4^z - \\frac{1}{8} \\sigma_5^z - \\frac{1}{8} \\sigma_6^z + \\frac{1}{4} \\sigma_1^z \\sigma_2^z - \\frac{1}{8} \\sigma_2^z \\sigma_3^z + \\frac{1}{8} \\sigma_2^z \\sigma_4^z - \\frac{1}{8} \\sigma_3^z \\sigma_4^z - \\frac{1}{8} \\sigma_3^z \\sigma_5^z - \\frac{1}{8} \\sigma_3^z \\sigma_6^z + \\frac{1}{8} \\sigma_5^z \\sigma_6^z - \\frac{1}{8} \\sigma_2^z \\sigma_3^z \\sigma_4^z + \\frac{1}{8} \\sigma_3^z \\sigma_5^z \\sigma_6^z\\\\\n",
     "$$\n",
     "\n",
     "We can implement such a hamiltonian using the `qubovert` library."
@@ -95,7 +95,7 @@
     "### Phase-separating operator\n",
     "Like in the other notebook, the phase-separating operator $U(C,\\gamma)$ encodes $C$ and can be derived from a cost Hamiltonian $H_{Ctot}$ in Ising-form.\n",
     "Unlike in the other notebook, there is now the possibility of having terms of degree higher than 2 in the cost function, for which we need to implement the corresponding $R_{z ... z}$ gates.\n",
-    "We do this by decomposing the $R_{z ... z}$ gate into multiple CNOT gates and a single $R_z$ gate.\n"
+    "We do this by decomposing the $R_{z ... z}$ gate into multiple CNOT gates and a single $R_z$ gate as illustrated by [Glos et al](https://arxiv.org/pdf/2009.07309.pdf).\n"
    ]
   },
   {
@@ -130,14 +130,19 @@
     "# Hamiltonians may be described as a dict of tuples describing acting qubits and a value for each clause\n",
     "# hamiltonian = {(q1?, q2?, ...) : factor}\n",
     "sat_hamiltonian = {\n",
-    "    (): 1,\n",
-    "    (0,): 0.5,\n",
-    "    (1,): 0.5,\n",
-    "    (2,): -0.5,\n",
-    "    (0, 1): -0.25,\n",
-    "    (1, 2): 0.25,\n",
-    "    (2, 3): 0.25,\n",
-    "    (4, 5): -0.25,\n",
+    "    (): 0.5,\n",
+    "    (0,): 0.25,\n",
+    "    (1,): 0.375,\n",
+    "    (3,): 0.125,\n",
+    "    (4,): -0.125,\n",
+    "    (5,): -0.125,\n",
+    "    (0, 1): 0.25,\n",
+    "    (1, 2): -0.125,\n",
+    "    (1, 3): 0.125,\n",
+    "    (2, 3): -0.125,\n",
+    "    (2, 4): -0.125,\n",
+    "    (2, 5): -0.125,\n",
+    "    (4, 5): 0.125,\n",
     "    (1, 2, 3): -0.125,\n",
     "    (2, 4, 5): 0.125\n",
     "}"
@@ -159,7 +164,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example_qc_problem, _ = problem_circuit(sat_hamiltonian, 6)\n",
+    "from qiskit.circuit import Parameter\n",
+    "\n",
+    "example_qc_problem = problem_circuit(sat_hamiltonian, 6, Parameter(\"$\\\\gamma$\"))\n",
     "example_qc_problem.draw(output='mpl')"
    ]
   },
@@ -288,6 +295,7 @@
     "$$1 - x_i - x_j - x_k + w_{ij} + x_i x_k + x_j x_k - w_{ij} x_k$$\n",
     "\n",
     "This term no longer contains a product of three variables but products of at most two variables and can therefore be used in a QUBO model.\n",
+    "The method for reduction by substitution above was first described by I. G. Rosenberg in \"Reduction of Bivalent Maximization to the Quadratic Case\" (1975) and can be found in a collection of different quadratization methods by [Dattani](https://arxiv.org/pdf/1901.04405.pdf).\n",
     "\n",
     "We use the `to_quso()` function from the `qubovert` library to quadratize the PUBO model.\n",
     "After applying QAOA to the resulting QUBO model, we can use the `convert_ancilla_bit_results()` function to convert the results back to the original PUBO model."
