--- a/configproblem/qaoa/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_sat.ipynb
@@ -152,7 +152,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example_qc_mixer, _ = mixer_circuit(2)\n",
+    "from qiskit.circuit import Parameter\n",
+    "\n",
+    "example_qc_mixer = mixer_circuit(2, Parameter(\"$\\\\beta$\"))\n",
     "example_qc_mixer.draw(output=\"mpl\")"
    ]
   },
@@ -215,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example_qc_problem, _ = problem_circuit(sat_hamiltonian, 6)\n",
+    "example_qc_problem = problem_circuit(sat_hamiltonian, 6, Parameter(\"$\\\\gamma$\"))\n",
     "example_qc_problem.draw(output=\"mpl\")"
    ]
   },
@@ -281,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counts, qc = quantum(problem_circuit, sat_hamiltonian, 6, 1, 1, 1)\n",
+    "counts, qc = quantum(problem_circuit, sat_hamiltonian, 6, 1, [1], [1])\n",
     "qc.draw(output=\"mpl\")"
    ]
   },
@@ -639,7 +641,7 @@
     "best_config = \"000110\" # 654321\n",
     "valid_configs = [\"101010\", \"101001\", \"101011\", \"100110\", \"100101\", \"100111\", \"001010\", \"001001\", \"001011\", \"000101\", \"000111\", \"111010\", \"111001\", \"111011\", \"110110\", \"110101\", \"110111\"]\n",
     "\n",
-    "plot_counts_histogram(counts, best_config, valid_configs)"
+    "plot_counts_histogram(counts, n_features, best_config, valid_configs)"
    ]
   },
   {
@@ -656,11 +658,12 @@
     "for i in range(0, 2 ** n_features):\n",
     "    probabilities_dict[(np.binary_repr(i, width=6))] = round(probabilities[i], 4)\n",
     "\n",
-    "plot_counts_histogram(probabilities_dict, best_config, valid_configs)"
+    "plot_counts_histogram(probabilities_dict, n_features, best_config, valid_configs)"
    ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "id": "fbc8eae91867e761"
   },
   {
    "cell_type": "code",
@@ -715,7 +718,8 @@
    ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "id": "8ec75c3dc0dda2aa"
   }
  ],
  "metadata": {
