Fix boolean var to integer mapping not being considered

--- a/configproblem/qaoa/qaoa_instance_evaluation.ipynb
+++ b/configproblem/qaoa/qaoa_instance_evaluation.ipynb
@@ -29,13 +29,13 @@
    "outputs": [],
    "source": [
     "# instance generation config\n",
-    "use_predefined_instances = True\n",
+    "use_predefined_instances = False\n",
     "\n",
-    "num_instances = 10\n",
-    "num_features = 7\n",
-    "min_num_clauses = 3\n",
-    "max_num_clauses = 3\n",
-    "min_num_literals_per_clause = 2\n",
+    "num_instances = 20\n",
+    "num_features = 6\n",
+    "min_num_clauses = 5\n",
+    "max_num_clauses = 7\n",
+    "min_num_literals_per_clause = 3\n",
     "max_num_literals_per_clause = 3\n",
     "min_feature_cost = 0\n",
     "max_feature_cost = 0\n",
@@ -66,7 +66,7 @@
     "# qaoa application config\n",
     "layers = 40 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
     "theta = {\"beta\": 0.01, \"gamma\": -0.01} # start values for optimization\n",
-    "strategy = 'min'\n",
+    "strategy = 'avg'\n",
     "use_warmstart = False\n",
     "use_optimizer = True\n",
     "print_res = False\n",
@@ -209,6 +209,8 @@
     "        for i in range(0, 2 ** get_hamiltonian_dimension(hamiltonian)):\n",
     "            probabilities_dict[(np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian)))] = probabilities[i]\n",
     "\n",
+    "        probabilities_dict = instance.convert_solution_dict(probabilities_dict, 'puso_combined')\n",
+    "\n",
     "        result_quality_list.append(instance.get_result_quality(probabilities_dict))\n",
     "\n",
     "        for key in probabilities_dict:\n",
@@ -257,6 +259,9 @@
     "            probabilities_dict[np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian))] = probabilities[i]\n",
     "\n",
     "        probabilities_dict = convert_ancilla_bit_results(probabilities_dict, instance.get_num_features())\n",
+    "\n",
+    "        probabilities_dict = instance.convert_solution_dict(probabilities_dict, 'quso_combined')\n",
+    "\n",
     "        result_quality_list.append(instance.get_result_quality(probabilities_dict))\n",
     "\n",
     "        for key in probabilities_dict:\n",
