Change notebook to match the parameters used in the paper

--- a/configproblem/qaoa/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_sat.ipynb
@@ -455,13 +455,13 @@
     "x1, x2, x3, x4, x5, x6 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6')\n",
     "\n",
     "# SAT Penalty\n",
-    "alpha_sat = 500 # 1e6\n",
+    "alpha_sat = 200 # 1e6\n",
     "\n",
     "# SAT QUBO\n",
     "sat_model = alpha_sat * (2 - x1 - x2 - x3 - x4 + x5 + x1 * x2 + 2 * x3 * x4 - x5 * x6)\n",
     "\n",
     "# Cost QUBO\n",
-    "cost_model = 30*x1 + 20*x2 + 25*x3 + 50*x4 + 30*x5 + 10*x6\n",
+    "cost_model = 30*x1 + 20*x2 + 25*x3 + 50*x4 + 10*x5 + 10*x6\n",
     "\n",
     "# Combine models\n",
     "combined_model = sat_model +  cost_model\n",
@@ -604,11 +604,11 @@
     "       0.26267851, 0.        , 0.232379  , 0.20248457, 0.20736441,\n",
     "       0.04472136, 0.        , 0.        , 0.        ]\n",
     "\n",
-    "layers = 60 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
+    "layers = 40 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
     "n_features = 6\n",
     "shots = 256\n",
     "theta = {\"beta\": 0.01, \"gamma\": -0.01} # start values for optimization\n",
-    "strategy = 'min'\n",
+    "strategy = 'avg'\n",
     "use_warmstart = False\n",
     "use_optimizer = True\n",
     "\n",
@@ -647,6 +647,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fbc8eae91867e761",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Visualize results using the StatevectorSimulator\n",
@@ -659,15 +661,13 @@
     "    probabilities_dict[(np.binary_repr(i, width=6))] = round(probabilities[i], 4)\n",
     "\n",
     "plot_counts_histogram(probabilities_dict, n_features, best_config, valid_configs)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "fbc8eae91867e761"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8ec75c3dc0dda2aa",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# prioritization of features\n",
@@ -715,11 +715,7 @@
     "        if print_debug_output:\n",
     "            print(\"Invalid config \" + str(config))\n",
     "print(\"Average difference: \" + str(average_difference/len(config_cost)))"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "8ec75c3dc0dda2aa"
+   ]
   }
  ],
  "metadata": {
@@ -738,7 +734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
