Optimize f and mu calculation, add option to save figures

--- a/configproblem/qaoa/qaoa_instance_evaluation.ipynb
+++ b/configproblem/qaoa/qaoa_instance_evaluation.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "# instance generation config\n",
-    "use_predefined_instances = False\n",
+    "use_predefined_instances = True\n",
     "\n",
     "num_instances = 20\n",
     "num_features = 6\n",
@@ -55,9 +55,11 @@
     "\n",
     "# run config\n",
     "run_print_hamiltonians = False\n",
-    "run_cost_landscape = False\n",
-    "run_puso_qaoa = True\n",
-    "run_quso_qaoa = True\n",
+    "run_cost_landscape = True\n",
+    "run_puso_qaoa = False\n",
+    "run_quso_qaoa = False\n",
+    "\n",
+    "save_results = False\n",
     "\n",
     "\n",
     "# cost landscape config\n",
@@ -86,7 +88,7 @@
     "else:\n",
     "    # define binary vars needed for problem instances\n",
     "    x1, x2, x3, x4, x5, x6, x7, x8, x9, x10 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6'), boolean_var('x7'), boolean_var('x8'), boolean_var('x9'), boolean_var('x10')\n",
-    "\n",
+    "    \n",
     "    # define set of problem instances to evaluate\n",
     "    problem_instances = [ProblemInstance([[(x1, True), (x2, True)],\n",
     "                                          [(x2, True), (x3, False), (x4, True)],\n",
@@ -169,13 +171,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "is_executing": true
    },
    "outputs": [],
    "source": [
     "# plot cost landscape\n",
     "if run_cost_landscape:\n",
     "    for index, instance in enumerate(problem_instances):\n",
+    "        file_path_beta_gamma = \"results\\\\instance_\" + str(index) + \"_beta_gamma_cost_landscape\" + \".png\" if save_results else None\n",
+    "        file_path_f_mu = \"results\\\\instance_\" + str(index) + \"_f_mu_cost_landscape\" + \".png\" if save_results else None\n",
     "        print(f\"Instance {index}:\")\n",
     "        if len(instance.get_cost_hamiltonian()) == 0:\n",
     "            print(\"Cost hamiltonian is zero, skipping plot for cost and combined hamiltonian\")\n",
@@ -185,15 +190,16 @@
     "                            {'hamiltonian': instance.get_cost_hamiltonian(), 'name': 'COST'},\n",
     "                            {'hamiltonian': instance.get_puso_combined_hamiltonian(), 'name': 'COMBINED'}]\n",
     "        strategies = ['min', 'avg', 'top']\n",
-    "        plot_beta_gamma_cost_landscape(quso_problem_circuit, hamiltonians, strategies, instance.get_num_features(), beta_gamma_step_size)\n",
-    "        plot_f_mu_cost_landscape(get_normalized_hamiltonian(instance.get_puso_combined_hamiltonian()), instance.get_num_features())"
+    "        plot_beta_gamma_cost_landscape(quso_problem_circuit, hamiltonians, strategies, instance.get_num_features(), beta_gamma_step_size, file_path=file_path_beta_gamma)\n",
+    "        plot_f_mu_cost_landscape(get_normalized_hamiltonian(instance.get_puso_combined_hamiltonian()), instance.get_num_features(), file_path=file_path_f_mu)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "is_executing": true
    },
    "outputs": [],
    "source": [
@@ -201,6 +207,7 @@
     "result_quality_list = []\n",
     "if run_puso_qaoa:\n",
     "    for index, instance in enumerate(problem_instances):\n",
+    "        file_path_pubo = \"results\\\\instance_\" + str(index) + \"_pubo_histogram\" + \".png\" if save_results else None\n",
     "        print(f\"Instance {index}:\")\n",
     "        hamiltonian = instance.get_puso_combined_hamiltonian()\n",
     "\n",
@@ -216,18 +223,20 @@
     "        for key in probabilities_dict:\n",
     "            probabilities_dict[key] = round(probabilities_dict[key], 4)\n",
     "\n",
-    "        plot_counts_histogram(probabilities_dict, get_hamiltonian_dimension(hamiltonian), instance.get_best_config(), instance.get_valid_configs())"
+    "        plot_counts_histogram(probabilities_dict, get_hamiltonian_dimension(hamiltonian), instance.get_best_config(), instance.get_valid_configs(), file_path=file_path_pubo)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
-    "# rank instances by result_quality = success_probability * 2^num_features / num_valid_configs\n",
+    "# rank instances by validity_quality = success_probability * 2^num_features / num_valid_configs\n",
     "if run_puso_qaoa:\n",
-    "    # sort instances by result_quality\n",
+    "    # sort instances by validity_quality\n",
     "    sorted_indices = np.argsort(result_quality_list)\n",
     "    sorted_indices = sorted_indices[::-1]\n",
     "    sorted_problem_instances = [problem_instances[i] for i in sorted_indices]\n",
@@ -242,7 +251,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "is_executing": true
    },
    "outputs": [],
    "source": [
@@ -250,6 +260,7 @@
     "result_quality_list = []\n",
     "if run_quso_qaoa:\n",
     "    for index, instance in enumerate(problem_instances):\n",
+    "        file_path_qubo = \"results\\\\instance_\" + str(index) + \"_qubo_histogram\" + \".png\" if save_results else None\n",
     "        print(f\"Instance {index}:\")\n",
     "        hamiltonian = instance.get_quso_combined_hamiltonian()\n",
     "\n",
@@ -267,18 +278,20 @@
     "        for key in probabilities_dict:\n",
     "            probabilities_dict[key] = round(probabilities_dict[key], 4)\n",
     "\n",
-    "        plot_counts_histogram(probabilities_dict, instance.get_num_features(), instance.get_best_config(), instance.get_valid_configs())"
+    "        plot_counts_histogram(probabilities_dict, instance.get_num_features(), instance.get_best_config(), instance.get_valid_configs(), file_path=file_path_qubo)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
-    "# rank instances by result_quality = success_probability * 2^num_features / num_valid_configs\n",
+    "# rank instances by validity_quality = success_probability * 2^num_features / num_valid_configs\n",
     "if run_quso_qaoa:\n",
-    "    # sort instances by result_quality\n",
+    "    # sort instances by validity_quality\n",
     "    sorted_indices = np.argsort(result_quality_list)\n",
     "    sorted_indices = sorted_indices[::-1]\n",
     "    sorted_problem_instances = [problem_instances[i] for i in sorted_indices]\n",
